--- a/JoystickTesting/static/styles/style.css
+++ b/JoystickTesting/static/styles/style.css
@@ -46,8 +46,43 @@ label {
     border-radius: 7px;
     font-family: "Verdana", sans-serif;
     text-align: left;
+    margin-left: 40%;
+    padding: 3px;
+}
+
+input {
+    background-color: #090909;
+    color: #006614;
+    border-color: #006614;
+    border-width: 2px;
+    margin-top: 1%;
+}
+
+input:focus {
+    border-color: #006614;
+}
+
+button {
+   border-color: #006614;
+   border-width: 3px;
+   background: #090909;
+   color: #006614;
+   text-align: center; 
+}
+
+button1 {
+    margin-left: 40%;
+}
+
+label1 {
+    color: #006614;
+    border-style: solid;
+    border-radius: 7px;
+    font-family: "Verdana", sans-serif;
+    text-align: left;
     margin-left: 95%;
     padding: 3px;
+}
   
 h2 {
     color: #006614;
