--- a/JoystickTesting/templates/testing.html
+++ b/JoystickTesting/templates/testing.html
@@ -169,7 +169,7 @@ ul {
 </div>
 <!--<button id="button3" style="display:none;" onclick="document.getElementById('button1').style.display = 'block'; this.style.display = 'none';">Button 3</button>-->
 
-
+<p id = "periphStates">Periph States</p>
 <p id = "debugCodePromptInfo"></p>
 <br>
 <p id = "messageBox"></p>
@@ -294,7 +294,7 @@ function getPeriphUpdates(){
 				*/
 				
 				
-				document.getElementById("para").innerHTML = strin;
+				document.getElementById("periphStates").innerHTML = strin;
 				//xmlDoc.getElementsByTagName("title")[0].childNodes[0].nodeValue;
 				//document.getElementById("para").innerHTML = xmlhttp.responseText;
 				
