fixed css being improperly linked

--- a/MainRobotCode/templates/testing.html
+++ b/MainRobotCode/templates/testing.html
@@ -51,7 +51,7 @@ ul {
 <!-- Required meta tags -->
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-	<link rel="stylesheet" type="text/css" href= "style.css">><!--"{{ url_for('static',filename='styles/style.css') }}"-->
+	<link rel="stylesheet" type="text/css" href= "{{ url_for('static',filename='styles/style.css') }}"><!--"style.css">-->
 
 <title>Robot Escape Room MQP</title>
 </head>
